# medusa-zip

./: .dir-locals.el  .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  crawl-zip.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: crawl.rs  destination.rs  main.rs  merge.rs  util.rs  zip.rs
lib/: Cargo.toml  README.md
lib/benches/: criterion_benchmark.rs  iai_benchmark.rs  my_benchmark.rs  tensorflow_gpu-2.5.3-cp38-cp38-manylinux2010_x86_64.whl
lib/src/: bench_utils.rs  crawl.rs  destination.rs  lib.rs  merge.rs  util.rs  zip.rs
libmedusa-zip/: Cargo.toml
libmedusa-zip/src/: crawl.rs  destination.rs  lib.rs  merge.rs  zip.rs
py/: .gitignore  Cargo.toml  README.md
py/medusa_zip/: __init__.py  __init__.pyi  crawl.py  crawl.pyi  destination.py  destination.pyi  merge.py  merge.pyi  zip.py  zip.pyi
py/src/: crawl.rs  destination.rs  lib.rs  merge.rs  util.rs  zip.rs
src/: main.rs
