[workspace]
members                 = [
    "./lib",
    "./py",
    "./cli",
]
default-members         = [
    "./lib",
    "./py",
    "./cli",
]
resolver                = "2"

[workspace.dependencies]
displaydoc              = "0.2.4"
regex                   = "1"
thiserror               = "1.0.30"
time                    = { version = "0.3.23", features = ["local-offset", "parsing"] }
tokio                   = "1.29"
zip                     = { git = "https://github.com/cosmicexplorer/zip", rev = "d48fb1dc1fc0355242f30349e03410c04b539f7e", features = ["rayon", "merge"] }
# zip                     = { path = "/home/cosmicexplorer/tools/zip", features = ["rayon", "merge"] }

[workspace.package]
version                 = "0.0.0"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
edition                 = "2021"
license                 = "Apache-2.0"

keywords                = ["zip", "file", "archive", "parallel", "i/o"]
categories              = ["development-tools::build-utils", "filesystem", "asynchronous", "caching"]
homepage                = "https://github.com/cosmicexplorer/medusa-zip"
repository              = "https://github.com/cosmicexplorer/medusa-zip"

[profile.release]
strip                   = true
lto                     = true
