[workspace]
members                 = [
    "./lib",
    "./py",
    "./cli",
]
default-members         = [
    "./lib",
    "./py",
    "./cli",
]
resolver                = "2"

[workspace.dependencies]
displaydoc              = "0.2.4"
regex                   = "1"
thiserror               = "1.0.30"
time                    = { version = "0.3.23", features = ["local-offset", "parsing"] }
tokio                   = "1.29"

[workspace.dependencies.zip]
version                 = "0.6.6"
git                     = "https://github.com/cosmicexplorer/zip"
rev                     = "79f818a8929b37eee6e7bf0e9284daa157a91aa7"
package                 = "zip-merge"
default-features        = false
features                = ["deflate", "time", "rayon", "merge"]

[workspace.package]
version                 = "0.0.6"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
edition                 = "2021"
license                 = "Apache-2.0"

keywords                = ["zip", "file", "archive", "parallel", "io"]
categories              = ["development-tools::build-utils", "filesystem", "asynchronous", "caching"]
homepage                = "https://github.com/cosmicexplorer/medusa-zip"
repository              = "https://github.com/cosmicexplorer/medusa-zip"

# [profile.release]
# strip                   = true
# lto                     = true
