[project]
name = "medusa-zip"
version = "0.0.0"
description = "High-performance parallelized implementations of common zip file operations."
license = {text = "Apache-2.0"}
readme = "py/README.md"
authors = [
  {name = "Danny McClanahan", email = "dmcC2@hypnicjerk.ai"},
]
keywords = ["zip", "rust", "fs", "file", "archive", "parallel", "pyo3"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Rust",
  "Operating System :: POSIX",
  # "Operating System :: MacOS :: MacOS X",
  # "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Build Tools",
  "Topic :: File Formats",
  "Topic :: System :: Archiving :: Compression",
  "Topic :: System :: Archiving :: Packaging",
  "Topic :: System :: Software Distribution",
  "Topic :: Utilities",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/cosmicexplorer/medusa-zip"
Repository = "https://github.com/cosmicexplorer/medusa-zip"
"Bug Tracker" = "https://github.com/cosmicexplorer/medusa-zip/issues"

[project.optional-dependencies]
asyncio = []
sync = []

[tool.setuptools]
package-dir = {"" = "py"}
packages = ["medusa_zip"]

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-rust>=0.12.1"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "hug"
src_paths = ["py"]
lines_after_imports = 2

[tool.cibuildwheel]
container-engine = "podman"
before-all = "curl https://sh.rustup.rs -sSf | sh -s -- -y"
environment = { PATH="$HOME/.cargo/bin:$PATH" }
build-verbosity = 3
# skip = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "pp*", "*musllinux*"]

[tool.cibuildwheel.linux]
archs = ["auto64"]
