[package]
name                    = "medusa-zip"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true

keywords.workspace      = true
categories.workspace    = true
homepage.workspace      = true
repository.workspace    = true

[dependencies]
clap.workspace          = true
displaydoc.workspace    = true
eyre                    = "0.6.8"
libmedusa-zip           = { path = "../lib" }
regex                   = "1"
serde_json              = "1.0"
thiserror.workspace     = true
tokio                   = { version = "1.29.1", features = ["io-util", "io-std", "macros", "rt-multi-thread"] }
zip.workspace           = true

# Use nicer docs features for docs.rs. See https://users.rust-lang.org/t/how-to-test-a-package-metadata-docs-rs-setting/53818.
[package.metadata.docs.rs]
all-features            = true
rustdoc-args            = ["--cfg", "docsrs"]
