[package]
name                    = "libmedusa-zip"
rust-version            = "1.70"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true

keywords.workspace      = true
categories.workspace    = true
homepage.workspace      = true
repository.workspace    = true
description             = "High-performance parallelized implementations of common zip file operations."

[dependencies]
async-recursion         = "1"
cfg-if                  = "1.0"
displaydoc.workspace    = true
futures                 = "0.3"
generic-array           = { version = "0.14.7", optional = true }
once_cell               = "1"
parking_lot             = "0.12"
rayon                   = "1.7"
regex.workspace         = true
sha3                    = { version = "0.10.8", optional = true }
static_init             = "1"
tempfile                = "3"
thiserror.workspace     = true
time.workspace          = true
tokio                   = { workspace = true, features = ["fs", "io-util", "rt", "sync"] }
tokio-stream            = { version = "0.1", features = ["fs"] }
walkdir                 = { version = "2", optional = true }
zip.workspace           = true

[dev-dependencies]
criterion               = { version = "0.5", features = ["async_tokio"] }
# Need this for the setup_main! macro used to set up the tokio runtime.
iai                     = { git = "https://github.com/cosmicexplorer/iai", rev = "098c3308d1113bd06e4ff88bd505f77655bf4b9a" }
tokio                   = { workspace = true, features = ["rt-multi-thread"] }
uuid                    = { version = "1.4.1", features = ["v4", "fast-rng"] }

[features]
bench-utils             = ["sha3", "generic-array", "walkdir"]
default                 = []

[[bench]]
name                    = "criterion_benchmark"
harness                 = false

[[bench]]
name                    = "iai_benchmark"
harness                 = false

# Use nicer docs features for docs.rs. See https://users.rust-lang.org/t/how-to-test-a-package-metadata-docs-rs-setting/53818.
[package.metadata.docs.rs]
all-features            = true
rustdoc-args            = ["--cfg", "docsrs"]
