[package]
name                    = "libmedusa-zip"
version                 = "0.0.0"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion         = "1"
clap                    = { version = "4", features = ["derive"] }
displaydoc              = { workspace = true }
futures                 = "0.3"
parking_lot             = "0.12"
rayon                   = "1.7"
regex                   = "1"
serde                   = { version = "1", features = ["derive"] }
tempfile                = "3"
thiserror               = { workspace = true }
tokio                   = { version = "1.29", features = ["fs", "io-util", "rt", "sync"] }
tokio-stream            = { version = "0.1", features = ["fs"] }
zip                     = { workspace = true }

[dev-dependencies]
proptest                = "1"
