[package]
name                    = "libmedusa-zip"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
rust-version            = "1.70"
license.workspace       = true

keywords.workspace      = true
categories.workspace    = true
homepage.workspace      = true
repository.workspace    = true

[dependencies]
async-recursion         = "1"
cfg-if                  = "1.0"
clap                    = { workspace = true }
displaydoc              = { workspace = true }
futures                 = "0.3"
once_cell               = "1"
parking_lot             = "0.12"
rayon                   = "1.7"
regex                   = "1"
serde                   = { version = "1", features = ["derive"] }
static_init             = "1"
tempfile                = "3"
thiserror               = { workspace = true }
time                    = { version = "0.3.23", features = ["local-offset", "parsing"] }
tokio                   = { version = "1.29", features = ["fs", "io-util", "rt", "sync"] }
tokio-stream            = { version = "0.1", features = ["fs"] }
zip                     = { workspace = true }

# [dev-dependencies]
# proptest                = "1"

# Use nicer docs features for docs.rs. See https://users.rust-lang.org/t/how-to-test-a-package-metadata-docs-rs-setting/53818.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
