[package]
name                    = "pymedusa-zip"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true

keywords.workspace      = true
categories.workspace    = true
homepage.workspace      = true
repository.workspace    = true

[lib]
name                    = "pymedusa_zip"
crate-type              = ["cdylib", "rlib"]

[dependencies]
libmedusa-zip           = { path = "../lib" }
pyo3                    = { version = "0.19", features = ["extension-module"] }
# TODO: make this an optional dep?
pyo3-asyncio            = { git = "https://github.com/awestlake87/pyo3-asyncio", rev = "0ce6d6dbad3668f98553f0d3b9c350e5f42a1996", features = ["tokio-runtime"] }
# FIXME: this will be released on crates.io any day now:
# pyo3-asyncio            = { version = "0.19", features = ["tokio-runtime"] }
regex.workspace         = true
time.workspace          = true
zip.workspace           = true

# Use nicer docs features for docs.rs. See https://users.rust-lang.org/t/how-to-test-a-package-metadata-docs-rs-setting/53818.
[package.metadata.docs.rs]
all-features            = true
rustdoc-args            = ["--cfg", "docsrs"]
