[package]
name                    = "pymedusa-zip"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true

keywords.workspace      = true
categories.workspace    = true
homepage.workspace      = true
repository.workspace    = true

[lib]
name                    = "pymedusa_zip"
crate-type              = ["cdylib", "rlib"]

[dependencies]
libmedusa-zip           = { path = "../lib" }
once_cell               = { version = "1", optional = true }
pyo3                    = { version = "0.19", features = ["extension-module"] }
pyo3-asyncio            = { git = "https://github.com/awestlake87/pyo3-asyncio", rev = "0ce6d6dbad3668f98553f0d3b9c350e5f42a1996", features = ["tokio-runtime"], optional = true }
# FIXME: this will be released on crates.io any day now:
# pyo3-asyncio            = { version = "0.19", features = ["tokio-runtime"] }
regex.workspace         = true
time.workspace          = true
tokio                   = { workspace = true, features = ["rt", "rt-multi-thread"], optional = true }
zip.workspace           = true

[features]
asyncio                 = ["pyo3-asyncio"]
sync                    = ["once_cell", "tokio"]
default                 = []

# Use nicer docs features for docs.rs. See https://users.rust-lang.org/t/how-to-test-a-package-metadata-docs-rs-setting/53818.
[package.metadata.docs.rs]
all-features            = true
rustdoc-args            = ["--cfg", "docsrs"]
